Very first version of unit tests

--- a/ProxyServer/.gitignore
+++ b/ProxyServer/.gitignore
@@ -1,27 +1,29 @@
-dump.rdb
-htpasswd
-node_modules
-nohup.out
+jasmine-1.1.0.js
+JasmineAdapter-1.1.2.js
+execRedisServer.sh
+monitor.sh
+nodeProfile.sh
+process.sh
+lanzAb.sh
 views
 nodeError
-nodeProfile.sh
-npm-debug.log
-output.file
-stacks.out
-v8.log
-.idea
-.idea/dictionaries/pacebes.xml
-abOutput
-.gitignore
-.DS_Store
 performance
-lanzAb.sh
+node_modules
+monitor
+.idea
+output.file
+dump.rdb
+npm-debug.log
+abOutput
+htpasswd
+nohup.out
+redisOutput
+stacks.out
+outputs.file
 node.log
 openPorts.txt
-outputs.file
-process.sh
-monitor
-monitor.sh
-redisOutput
-execRedisServer.sh
 nohup.redisServer
+v8.log
+.idea/dictionaries/pacebes.xml
+.gitignore
+.DS_Store
